--- a/nbiInvite.html
+++ b/nbiInvite.html
@@ -69,7 +69,9 @@ background: transparent;
                 <img src="Resources/NBIImages/nbi.png" style="height: inherit;">
             </div>
             <div class="text-light p-0 m-auto me-3">
-                <a class="btn btn-primary btn-dark float-end" href="#" role="button">Join NBI Discord.</a>
+                <a class="btn btn-primary btn-dark float-end" href="https://discord.gg/j7pQ7cQT" role="button"
+                    onclick="window.location.replace('https\:\/\/discord.gg/j7pQ7cQT');">Join NBI
+                    Discord.</a>
             </div>
         </div>
     </div>
