fixup and discord embed (hopefully)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
             z-index: -2;
         }
     </style>
+
+    <meta content="NBI" property="og:title" /> <!-- embed title -->
+    <meta content="Oldest faction standing." property="og:description" /> <!-- description -->
+    <meta content="https://decell-1.github.io/Nebula-Industries-Propoganda" property="og:url" />
+    <!-- embed click link -->
+    <meta property="og:image"
+        content="https://decell-1.github.io/Nebula-Industries-Propoganda/Resources/NBIImages/nbi.png">
+    <!-- embed image -->
+    <meta content="#472C6D" data-react-helmet="true" name="theme-color" /> <!-- embed color -->
+    <meta name="twitter:card" content="summary_large_image"> <!-- make the embed larger -->
 </head>
 
 <body>
@@ -49,11 +59,11 @@
         <nav id="intro" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="logo-wrapper d-flex justify-content-center align-items-center flex-grow-1">
                 <div id="intro-nbi-logo" class="nav-item">
-                    <img src="resources/NBIImages/nbi.png" alt="nbi" class="img-fluid">
+                    <img src="Resources/NBIImages/nbi.png" alt="nbi" class="img-fluid">
                 </div>
 
                 <div id="center-logo" class="nav-item" style="visibility: hidden;">
-                    <img id="center-logo-img" src="resources/NBIImages/nbi.png" alt="nbi">
+                    <img id="center-logo-img" src="Resources/NBIImages/nbi.png" alt="nbi">
                 </div>
             </div>
 
