--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="LayoutCSS.css">
-    <title>Document</title>
+    <title>Nebula Industries</title>
     <style>
         #masterDIV::after {
             content: "";
@@ -51,6 +51,24 @@
     <!-- embed image -->
     <meta content="#472C6D" data-react-helmet="true" name="theme-color" /> <!-- embed color -->
     <meta name="twitter:card" content="summary_large_image"> <!-- make the embed larger -->
+
+    <link rel="apple-touch-icon" sizes="57x57" href="Resources/Favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="Resources/Favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="Resources/Favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Resources/Favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="Resources/Favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Resources/Favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="Resources/Favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Resources/Favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Resources/Favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="Resources/Favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Resources/Favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="Resources/Favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Resources/Favicons/favicon-16x16.png">
+    <link rel="manifest" href="Resources/Favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
